Fix some bugs in the generated YAML

--- a/notebooks/A NEAT Demonstration.ipynb
+++ b/notebooks/A NEAT Demonstration.ipynb
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "directed = True # Yes, this is technically a directed network\n",
+    "directed = True # Yes, this is technically a directed network, but we'll treat it as undirected\n",
     "node_path = \"ecto_kgx_tsv_nodes.tsv\"\n",
     "edge_path = \"ecto_kgx_tsv_edges.tsv\""
    ]
@@ -210,6 +210,7 @@
     "      return_weight: 1.0\n",
     "      explore_weight: 1.0\n",
     "      iterations: {iterations}\n",
+    "      use_mirrored_strategy: False\n",
     "\n",
     "  tsne:\n",
     "    tsne_file_name: tsne.png\n",
@@ -255,6 +256,17 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6d682071",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import Image\n",
+    "Image(filename='tsne.png') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e259df92",
    "metadata": {},
    "outputs": [],
    "source": []
