Add material to notebook

--- a/notebooks/A NEAT Demonstration.ipynb
+++ b/notebooks/A NEAT Demonstration.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "46f4a1e0",
    "metadata": {},
    "outputs": [],
@@ -330,29 +330,28 @@
    "metadata": {},
    "source": [
     "One last detail before assembling the config file: we would like to categorize our nodes, but the existing categories are rather homogeneous.\n",
-    "Let's process the nodes file a bit, creating a new file with prefixes as categories."
+    "Let's process the nodes file a bit, creating a new file with prefixes as categories. It's a bit hacky, but we should be able to visualize the differences between sources."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e72b6e11",
    "metadata": {},
    "outputs": [],
    "source": [
-    "node_property_for_color = 'prefix'\n",
-    "node_colors_file_name = node_path + \".colors\"\n",
+    "node_colors_file_name = (node_path.split(\".\"))[0] + \"_colors.tsv\"\n",
     "with open(node_path, 'r') as node_file:\n",
+    "    header = node_file.readline()\n",
     "    with open(node_colors_file_name, 'w') as node_colors_file:\n",
-    "        header = \"id\\tprefix\\n\"\n",
     "        node_colors_file.write(header)\n",
-    "        node_file.readline()\n",
     "        for line in node_file:\n",
-    "            splitline=(line.rstrip()).split('\\t')\n",
-    "            id = splitline[0]\n",
-    "            prefix = (id.split(':'))[0]\n",
-    "            outline = f\"{id}\\t{prefix}\\n\"\n",
-    "            node_colors_file.write(outline)"
+    "            splitline=line.split('\\t')\n",
+    "            prefix = ((splitline[0]).split(':'))[0]\n",
+    "            splitline[1] = prefix\n",
+    "            outline = \"\\t\".join(splitline)\n",
+    "            node_colors_file.write(outline)\n",
+    "node_path = node_colors_file_name"
    ]
   },
   {
@@ -397,9 +396,6 @@
     "\n",
     "  tsne:\n",
     "    tsne_file_name: tsne.png\n",
-    "    color_nodes: True\n",
-    "    node_file: {node_colors_file_name}\n",
-    "    node_property_for_color: {node_property_for_color}\n",
     "\n",
     "classifier:\n",
     "  edge_method: {edge_method}\n",
@@ -429,13 +425,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cf384f16",
+   "metadata": {},
+   "source": [
+    "Time to finally run NEAT! This is the easy part.\n",
+    "\n",
+    "It may be more convenient to run the following command in its own terminal window - just change `$config_filename` to the name of the config YAML file."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d019d3f7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pwd\n",
+    "\n",
     "!neat run --config $config_filename"
    ]
   },
