A few minor changes to notebook text

--- a/notebooks/A NEAT Demonstration.ipynb
+++ b/notebooks/A NEAT Demonstration.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "46f4a1e0",
    "metadata": {},
    "outputs": [],
@@ -330,12 +330,12 @@
    "metadata": {},
    "source": [
     "One last detail before assembling the config file: we would like to categorize our nodes, but the existing categories are rather homogeneous.\n",
-    "Let's process the nodes file a bit, creating a new file with prefixes as categories. It's a bit hacky, but we should be able to visualize the differences between sources."
+    "Let's process the nodes file a bit, creating a new file with prefixes as categories. It's a bit hacky, but we should be able to visualize the differences between sources. NEAT uses functions in Embiggen to visualize graph data and embeddings. The node types are in the column defined by `node_list_node_types_column` in the config file."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e72b6e11",
    "metadata": {},
    "outputs": [],
@@ -457,12 +457,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e259df92",
+   "cell_type": "markdown",
+   "id": "7e0c2256",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Don't forget that there's now a ready-to-use model here, too."
+   ]
   }
  ],
  "metadata": {
