Update example notebook and quickstart

--- a/notebooks/A NEAT Demonstration.ipynb
+++ b/notebooks/A NEAT Demonstration.ipynb
@@ -50,10 +50,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5f0415b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2022-06-03 14:34:59--  https://kg-hub.berkeleybop.io/kg-obo/ecto/2022-03-09/ecto_kgx_tsv.tar.gz\n",
+      "Resolving kg-hub.berkeleybop.io (kg-hub.berkeleybop.io)... 54.230.163.79, 54.230.163.9, 54.230.163.14, ...\n",
+      "Connecting to kg-hub.berkeleybop.io (kg-hub.berkeleybop.io)|54.230.163.79|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 2753731 (2.6M) [plain/text]\n",
+      "Saving to: ‘ecto_kgx_tsv.tar.gz.1’\n",
+      "\n",
+      "ecto_kgx_tsv.tar.gz 100%[===================>]   2.63M  --.-KB/s    in 0.09s   \n",
+      "\n",
+      "2022-06-03 14:34:59 (29.3 MB/s) - ‘ecto_kgx_tsv.tar.gz.1’ saved [2753731/2753731]\n",
+      "\n",
+      "ecto_kgx_tsv_nodes.tsv\n",
+      "ecto_kgx_tsv_edges.tsv\n"
+     ]
+    }
+   ],
    "source": [
     "!wget https://kg-hub.berkeleybop.io/kg-obo/ecto/2022-03-09/ecto_kgx_tsv.tar.gz\n",
     "!tar xvzf ecto_kgx_tsv.tar.gz"
@@ -362,40 +382,6 @@
    "outputs": [],
    "source": [
     "outstring = f\"\"\"\n",
-    "graph_data:\n",
-    "  graph:\n",
-    "    directed: {directed}\n",
-    "    node_path: {node_path}\n",
-    "    edge_path: {edge_path}\n",
-    "    verbose: True\n",
-    "    nodes_column: 'id'\n",
-    "    node_list_node_types_column: 'category'\n",
-    "    default_node_type: 'biolink:NamedThing'\n",
-    "    sources_column: 'subject'\n",
-    "    destinations_column: 'object'\n",
-    "    default_edge_type: 'biolink:related_to'\n",
-    "  pos_validation:\n",
-    "    edge_path: {pos_valid_edge_path}\n",
-    "  neg_training:\n",
-    "    edge_path: {neg_train_edge_path}\n",
-    "  neg_validation:\n",
-    "    edge_path: {neg_valid_edge_path}\n",
-    "\n",
-    "embeddings:\n",
-    "  embedding_file_name: {embedding_file_name}\n",
-    "  embedding_history_file_name: {embedding_history_file_name}\n",
-    "  node_embedding_params:\n",
-    "      node_embedding_method_name: {node_embedding_method_name}\n",
-    "      walk_length: {walk_length}\n",
-    "      batch_size: {batch_size}\n",
-    "      window_size: {window_size}\n",
-    "      return_weight: 1.0\n",
-    "      explore_weight: 1.0\n",
-    "      iterations: {iterations}\n",
-    "      use_mirrored_strategy: False\n",
-    "\n",
-    "  tsne:\n",
-    "    tsne_file_name: tsne.png\n",
     "\n",
     "classifier:\n",
     "  edge_method: {edge_method}\n",
@@ -408,7 +394,66 @@
     "          random_state: {classifier_model_random_state}\n",
     "          max_iter: {classifier_model_max_iter}\n",
     "\n",
-    "output_directory: {output_directory}\n",
+    "\"\"\"\n",
+    "\n",
+    "f\"\"\"\n",
+    "Target:\n",
+    "  target_path: {output_directory}\n",
+    "\n",
+    "GraphDataConfiguration:\n",
+    "  graph:\n",
+    "    directed: {directed}\n",
+    "    node_path: {node_path}\n",
+    "    edge_path: {edge_path}\n",
+    "    verbose: True\n",
+    "    nodes_column: \"id\"\n",
+    "    node_list_node_types_column: \"category\"\n",
+    "    default_node_type: \"biolink:NamedThing\"\n",
+    "    sources_column: \"subject\"\n",
+    "    destinations_column: \"object\"\n",
+    "    default_edge_type: \"biolink:related_to\"\n",
+    "  evaluation_data:\n",
+    "    valid_data:\n",
+    "      pos_edge_filepath: {pos_valid_edge_path}\n",
+    "      neg_edge_filepath: {neg_valid_edge_path}\n",
+    "    train_data:\n",
+    "      neg_edge_filepath: {neg_train_edge_path}\n",
+    "\n",
+    "EmbeddingsConfig:\n",
+    "  filename: {embedding_file_name}\n",
+    "  history_filename: {embedding_history_file_name}\n",
+    "  node_embeddings_params:\n",
+    "    method_name: {node_embedding_method_name}\n",
+    "    walk_length: {walk_length}\n",
+    "    batch_size: {batch_size}\n",
+    "    window_size: {window_size}\n",
+    "    return_weight: 1.0\n",
+    "    explore_weight: 1.0\n",
+    "    iterations: {iterations}\n",
+    "  tsne_filename: tsne.png\n",
+    "\n",
+    "ClassifierContainer:\n",
+    "  classifiers:\n",
+    "    - classifier_id: lr_1\n",
+    "      classifier_name: {classifier_type}\n",
+    "      classifier_type: {classifier_model_type}\n",
+    "      edge_method: {edge_method}\n",
+    "      outfile: {classifier_model_outfile}\n",
+    "      parameters:\n",
+    "        sklearn_params:\n",
+    "          random_state: {classifier_model_random_state}\n",
+    "          max_iter: {classifier_model_max_iter}\n",
+    "\n",
+    "ApplyTrainedModelsContainer:\n",
+    "  models:\n",
+    "    - model_id: lr_1\n",
+    "      node_types:\n",
+    "        source:\n",
+    "          - \"CHEBI\"\n",
+    "        destination:\n",
+    "          - \"CHEBI\"\n",
+    "      cutoff: 0.9\n",
+    "      outfile: lr_predictions.tsv\n",
     "\"\"\"\n",
     "print(outstring)"
    ]
@@ -461,13 +506,16 @@
    "id": "7e0c2256",
    "metadata": {},
    "source": [
-    "Don't forget that there's now a ready-to-use model here, too."
+    "Take a look at the predictions in `lr_predictions.tsv` - each should predict a relationship between one CHEBI entity and another. This isn't terribly exciting, but feel free to try again with fresh data and/or parameters!"
    ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
