Update import statements for grape

--- a/notebooks/A NEAT Demonstration.ipynb
+++ b/notebooks/A NEAT Demonstration.ipynb
@@ -176,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ensmallen import Graph"
+    "from grape import Graph"
    ]
   },
   {
@@ -512,7 +512,7 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
   },
   "kernelspec": {
    "display_name": "Python 3.8.10 64-bit",
