--- a/notebooks/A NEAT Demonstration.ipynb
+++ b/notebooks/A NEAT Demonstration.ipynb
@@ -34,6 +34,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "50a7cdfc",
+   "metadata": {},
+   "source": [
+    "Or, install with `pip`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f528d1aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install neat-ml"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0fd87004",
    "metadata": {},
    "source": [
